Created value to dashboard states and enum states in project.rb

--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -1,4 +1,10 @@
-<h1>Dashboard de Administración</h1>
+<nav class="navbar navbar-light bg-light justify-content-between">
+    <h1>Dashboard de Administración<a class="navbar-brand"></a></h1>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Buscar Estado" aria-label="Search" name="state">
+        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+</nav>
 <table class="table">
 <div class="row">
     <div class="col -md-3"> 
