--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -20,9 +20,9 @@
     <div class="form-group">
         <label for="state">Estado</label>
         <select name="states" id="state" class="form-control">
-            <option>Propuesta</option>
-            <option>En progreso</option>
-            <option>Terminado</option>
+            <option value="0">Propuesta</option>
+            <option value="1">En progreso</option>
+            <option value="2">Terminado</option>
         </select>
     </div>
     <button type="submit" class="btn btn-info">Guardar</button>
