--- a/app/views/projects/create.html.erb
+++ b/app/views/projects/create.html.erb
@@ -1,2 +1,16 @@
-<h1>Projects#create</h1>
-<p>Find me in app/views/projects/create.html.erb</p>
+<% if @project.errors.any? %>
+    <div id="error_explanation">
+        <h2>
+            <%= pluralize(@project.errors.count, "error") %>
+            prohibited this post from being saved:
+        </h2>
+        <ul>
+            <% @project.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+        </ul>
+    </div>
+    <p> <%=link_to 'Try Again', root_path %></p> 
+<% else %>
+    <h1>Se ha creado un post con éxito, vuelve a <%=link_to 'Post', projects_dashboard_path %></h1> 
+<% end %>
